--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Kasuti - Personal Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +52,7 @@
         <div class="table-cell">
           <div class="container">
             <h1 class="hero-title mb-4">Hi <br> I'm Emmanuel Kasuti</h1>
-            <p class="hero-subtitle"><span class="typed" data-typed-items="Graphite Artist, Designer, Developer, Freelancer."></span></p>
+            <p class="hero-subtitle"><span class="typed" data-typed-items="Pencil Artist, Designer, Web Developer, Freelancer."></span></p>
           </div>
         </div>
       </div>
@@ -98,7 +95,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Painting</span> <span class="pull-right">50%</span>
+                    <span>Painting</span> <span class="pull-right">65%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -208,6 +205,8 @@
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
               </a>
+
+              <!-- Portfolio 001 == Furaha -->
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
@@ -225,6 +224,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Portfolio 002 == Struggles of an African woman -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -235,7 +236,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Struggles of a Kamba woman</h2>
+                    <h2 class="w-title">Struggles of an African woman</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Graphite pencil</span> / <span class="w-date">31 May. 2021</span>
                     </div>
@@ -249,6 +250,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Portfolio 003 == Eastern Beauty -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -273,6 +276,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Portfolio 004 == Tiger -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -297,6 +302,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Portfolio 005 == Life Saver -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -321,6 +328,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Portfolio 006 == Apostle Faith Wairimu -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -390,8 +399,7 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-
-        </div> -->
+          </div> 
           </div>
         </div>
       </div>
