--- a/portfolio-details01.html
+++ b/portfolio-details01.html
@@ -7,12 +7,9 @@
 
   <title>Mek - Portfolio Details</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="" name="keywords"> 
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+  
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -99,7 +96,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Struggles of a Kamba woman</h2>
+              <h2>Struggles of an African woman</h2>
               <p>
                 The art piece represents challenges women go through in a male dominated society.
                 The woman on the left is cooking and breastfeeding the child at the same time.
