email, phone number and passport photo update

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p><span class="title-s">Name: </span> <span>Makau Emmanuel Kasuti</span></p>
                         <p><span class="title-s">Profile: </span> <span>Artist </span></p>
                         <p><span class="title-s">Email: </span> <span>makaumanu01@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(254) 726745673</span></p>
+                        <p><span class="title-s">Phone: </span> <span> +1 (603) 349-0400</span></p>
                       </div>
                     </div>
                   </div>
@@ -469,8 +469,8 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> P.O Box 198, 90132 S/Hamud</li>
-                        <li><span class="bi bi-phone"></span> (254) 726745673</li>
-                        <li><span class="bi bi-envelope"></span> makaumanu01@example.com</li>
+                        <li><span class="bi bi-phone"></span> +1 (603) 349-0400</li>
+                        <li><span class="bi bi-envelope"></span> makaumanu01@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
