--- a/portfolio-details02.html
+++ b/portfolio-details02.html
@@ -48,12 +48,12 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Portfolio Details</h2>
+          <h2 class="hero-title mb-4">Eastern Beauty</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
             </li>
-            <li class="breadcrumb-item active">Portfolio Details</li>
+            <li class="breadcrumb-item active">Eastern Beauty</li>
           </ol>
         </div>
       </div>
@@ -100,7 +100,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Eastern beuty</h2>
+              <h2>Eastern beauty</h2>
               <p>
                 The late Anna (on the left) always quoted Shaw's saying ~
                 "You don't stop laughing when you grow old, you grow old when you stop laughing."
