--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                         <li><a href="https://web.facebook.com/emmanuel.makau.5055/"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href="https://www.instagram.com/_kasuti/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href="https://github.com/waterkamel"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/emmanuel-kasuti-53b173213/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/emmanuel-kasuti/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
