--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <div class="table-cell">
           <div class="container">
             <h1 class="hero-title mb-4">Hi <br> I'm Emmanuel Kasuti</h1>
-            <p class="hero-subtitle"><span class="typed" data-typed-items="Pencil Artist, Designer, Web Developer, Freelancer."></span></p>
+            <!-- Add web development projects -->
+            <p class="hero-subtitle"><span class="typed" data-typed-items=
+              "Pencil Artist, Designer, Web Developer, Freelancer"></span></p>
+              <!-- Art works, Designs(Figma), Web projects(Github pages), Freelancer(Contacts)-->
           </div>
         </div>
       </div>
@@ -73,7 +76,8 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/test-1.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <!-- Removed the profile picture-->
+                        <img src="assets/img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -86,20 +90,22 @@
                     </div>
                   </div>
                   <div class="skill-mf">
+                    <!-- Skills : art -->
                     <p class="title-s">Skill</p>
-                    <span>Charcoal</span> <span class="pull-right">85%</span>
+                    <span>Art</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Graphic Desgning</span> <span class="pull-right">75%</span>
+                    <span>Web developmennt</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Painting</span> <span class="pull-right">65%</span>
+                    <span>Graphic Design</span> <span class="pull-right">75%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Graphite </span> <span class="pull-right">90%</span>
+                    <span>Data Visualization </span> <span class="pull-right">80%</span>
+
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -113,8 +119,21 @@
                       </h5>
                     </div>
                     <p class="lead">
-                    I love a challenge.<br>
+                    <!-- I love a challenge.<br>
                     I love to take a simple pencil, piece of paper, and eraser, and make something really beautiful.<br>
+                    I disappear into my work for hours at a time, completely entranced. -->
+                    <!-- Name, Freshman, Kenya, Interests, Artist, Travelling: Kenya (Mombasa, Tsavo, Amboselli, Parks etc)
+                       USA(Hanover- school, New York- NEw years eve, New Jersey- Winter break, Boston- MIT, Lesly, Wellsely, Babson)-->
+                    <!-- Hi there, Karibu.<br>
+                    My name is Emmanuel Kasuti 26'<br>
+                    I'm from Nairobi Kenya. -->
+                    My name is Emmanuel Kasuti and I am a freshman at Dartmouth College from Nairobi, Kenya.
+                    Fun fact about me is that I play the saxophone and I am an artist too! <br> <br> 
+                    I’m currently pursuing a degree in Computer science and digital arts. With a focus on creative problem solving and innovation.
+                    I’m excited to learn more about how technology can be used to shape our world. 
+                    I enjoy traveling, exploring new places and playing the saxophone. I also enjoy spending time in the kitchen, 
+                    experimenting with new recipes and cooking for my friends and family. <br> <br>
+                    I love a challenge. <br> I love to take a simple pencil, piece of paper, and eraser, and make something really beautiful. 
                     I disappear into my work for hours at a time, completely entranced.
                     </p>
                   </div>
@@ -181,17 +200,17 @@
       </div>
     </div>
 
-    <!-- Projects Section -->
+    <!-- Art Projects Section -->
     <section id="projects" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Portfolio
+                Art Portfolio
               </h3>
               <p class="subtitle-a">
-                Get ready for an Art Attack!!.
+                Below are my art projects.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -358,6 +377,108 @@
         </div>
       </div>
     </section>
+
+    <!-- Web Projects Section -->
+    <!-- Web Projects: Akan, Antra, Yuri -->
+    <section id="projects" class="portfolio-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Web Portfolio
+              </h3>
+              <p class="subtitle-a">
+                Below are my web projects.
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/akan_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/akan_1.png" alt="" class="img-fluid">
+                </div>
+              </a>
+
+              <!-- Web Portfolio 001 == Akan naming system -->
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Akan Name Generator</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">HTML, CSS, Js</span> / <span class="w-date">24 Aug. 2020</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="web_portfolio-details_akan.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Web Portfolio 002 == Yuri: Career Path Advisor -->
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/yuri_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/yuri_1.png" alt="" class="img-fluid">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Yuri</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">HTML, CSS, Js</span> / <span class="w-date">31 May. 2021</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="web_portfolio-details_yuri.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Web Portfolio 003 == Antra -->
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/antra_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/antra_1.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Antra</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">HTML, CSS, Js</span> / <span class="w-date">07 June. 2021</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="web_portfolio-details_antra.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
     <!-- Testimonials Section -->
     <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
@@ -372,12 +493,14 @@
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/test-1.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Emmanuel Kasuti</span>
+                      <span class="author">Maxwell Simba</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        I am a self taught artist.
-                        I love the individual challenges that every portrait brings: a head full of curls, a checked shirt, or a tartan dress.
+                        I stumbled upon Kasuti's website and was immediately drawn to the beautiful art pieces showcased.
+                        Upon purchasing a piece, I was blown away by the quality and attention to detail. 
+                        I now proudly display the artwork in my home and receive compliments on it daily. 
+          
                       </p>
                     </div>
                   </div>
@@ -391,7 +514,9 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        He gives me art attacks!!
+                        I commissioned Kasuti to create a custom piece for me and was thrilled with the result. <br>
+                        The artwork captured exactly what I was looking for and the artist was a pleasure to work with. <br>
+                        I highly recommend anyone looking for unique, high-quality art to navigate his website and get that ART ATTACK!!
                       </p>
                     </div>
                   </div>
@@ -423,38 +548,23 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                        <div class="row">
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                      <div class="overlay">
+                        <div class="container">
+                        <h1> Let's Talk</h1>
+
+                        <!-- form  -->
+                        <form action="https://formspree.io/f/mknayela" method="POST">
+                          <div class="row">
+                            <input type="text" name="Name" placeholder="Name" required>
+                            <input type="email" name="Email" placeholder="Email" required>
+                            <input type="text" name="Subject" placeholder="Subject" required>
+                            <textarea name="Message" placeholder="Message" required></textarea>
+                            <input type="submit" value="Submit" class="btn btn-primary">
                             </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                            </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                            </div>
-                          </div>
-                          <div class="col-md-12">
-                            <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                            </div>
-                          </div>
-                          <div class="col-md-12 text-center my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                          </div>
-                          <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                          </div>
-                        </div>
-                      </form>
+                        </form>
+                        </div>           
+                    </div>
+                    
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -468,8 +578,8 @@
 
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> P.O Box 198, 90132 S/Hamud</li>
-                        <li><span class="bi bi-phone"></span> +1 (603) 349-0400</li>
+                        <li><span class="bi bi-geo-alt"></span> 62 College St</li>
+                        <li><span class="bi bi-phone"></span> +1 (603)349-0400</li>
                         <li><span class="bi bi-envelope"></span> makaumanu01@gmail.com</li>
                       </ul>
                     </div>
