--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <!-- ======= Header: Furaha ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -72,11 +72,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/B1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/B2.jpg" alt="">
+                  <img src="assets/img/work-1.jpg" alt="">
                 </div>
 
               </div>
@@ -91,7 +87,7 @@
                 <li><strong>Category</strong>: Painting</li>
                 <li><strong>Size</strong>: A2</li>
                 <li><strong>Project date</strong>: 24 Aug, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/p/CPjHw2fnp11/">Check it out</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/_kasuti/">Check it out</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
