--- a/portfolio-details03.html
+++ b/portfolio-details03.html
@@ -72,15 +72,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/D1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/D2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/D3.jpg" alt="">
+                  <img src="assets/img/work-4.jpg" alt="">
                 </div>
 
               </div>
@@ -95,7 +87,7 @@
                 <li><strong>Category</strong>: Color pencil</li>
                 <li><strong>Size</strong>: A3</li>
                 <li><strong>Project date</strong>: 27 June, 2021</li>
-                <li><strong>Project URL</strong>: <a href="">Check it out</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/_kasuti/">Check it out</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
