--- a/portfolio-details04.html
+++ b/portfolio-details04.html
@@ -73,15 +73,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/E1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/E2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/E3.jpg" alt="">
+                  <img src="assets/img/work-5.jpg" alt="">
                 </div>
 
               </div>
@@ -96,7 +88,7 @@
                 <li><strong>Category</strong>: Graphite & Color pencil</li>
                 <li><strong>Size</strong>: A3</li>
                 <li><strong>Project date</strong>: 2 Aug, 2021</li>
-                <li><strong>Project URL</strong>: <a href="">Check it out</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/_kasuti/">Check it out</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
