--- a/portfolio-details05.html
+++ b/portfolio-details05.html
@@ -72,11 +72,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/F1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/F2.jpg" alt="">
+                  <img src="assets/img/work-6.jpg" alt="">
                 </div>
 
               </div>
@@ -99,9 +95,7 @@
               <h2>Apostle Faith Wairimu</h2>
               <p>
                 I presented this art piece to a very inspirational, remarkable, resilient,reliable, innovative and Godfearing woman.
-                She is an epitome of beauty with brains
-
-
+                She is an epitome of beauty with brains.
               </p>
             </div>
           </div>
