--- a/portfolio-details01.html
+++ b/portfolio-details01.html
@@ -73,11 +73,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/B1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/B2.jpg" alt="">
+                  <img src="assets/img/work-2.jpg" alt="">
                 </div>
 
               </div>
@@ -92,7 +88,7 @@
                 <li><strong>Category</strong>: Graphite pencil</li>
                 <li><strong>Size</strong>: A2</li>
                 <li><strong>Project date</strong>: 31 May, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/p/CPjHw2fnp11/">Check it out</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/_kasuti/">Check it out</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
