--- a/portfolio-details02.html
+++ b/portfolio-details02.html
@@ -73,16 +73,10 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/C1.jpg" alt="">
+                  <img src="assets/img/work-3.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/C2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/C3.jpg" alt="">
-                </div>
+                
 
               </div>
               <div class="swiper-pagination"></div>
@@ -96,7 +90,7 @@
                 <li><strong>Category</strong>: Graphite & Color pencil</li>
                 <li><strong>Size</strong>: A3</li>
                 <li><strong>Project date</strong>: 07 June, 2021</li>
-                <li><strong>Project URL</strong>: <a href="">Check it out</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/_kasuti/">Check it out</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
