--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
 
+                <!-- Maxwell O Simba -->
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
@@ -506,11 +507,12 @@
                   </div>
                 </div>
 
+                <!-- Abigael Kariuki -->
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/test-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Abigael</span>
+                      <span class="author">Abigael Kariuki</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
@@ -520,7 +522,29 @@
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+
+                </div>
+
+                <!-- Nellie Mkamburi -->
+                <div class="swiper-slide">
+                  <div class="testimonial-box">
+                    <div class="author-test">
+                      <img src="assets/img/test-3.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Nellie Mkamburi</span>
+                    </div>
+                    <div class="content-test">
+                      <p class="description lead">
+                        I would describe Kasuti as a person who has the makings of a modern day Paul Cadden. 
+                        There is always a story behind all his art pieces and that's what makes them all so breathtaking!
+                        He has received recognition in the EducationUSA program particularly for his 
+                        "struggles of an African woman" masterpiece. He is undoubtedly among one of the best young,
+                        Kenyan pencil artistes and I'd highly recommend anyone looking for that raw,unique art to his amazing website.
+          
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
